[metadata]
name = asyncvnc
version = 1.1.0
author = Barney Gale
description = Asynchronous VNC for Python
long_description = file: README.rst
url = https://github.com/barneygale/asyncvnc
license = GPL

[options]
py_modules = asyncvnc
python_requires = >= 3.7
install_requires =
    cryptography
    keysymdef
    numpy
